--- a/final_project.qmd
+++ b/final_project.qmd
@@ -22,7 +22,7 @@ In the last few decades, sustainability become a topic of increasing interest, p
 
 **Based on our literature review, we hypothesized that countries with higher gross domestic product (GDP) per capita** **will have higher sustainability scores. Additionally, we hypothesized that there is a positive correlation between country wealth and sustainability scores of countries.**
 
-After completing this report we hope to provide an analysis of the relationship between GDP per capita and sustainability scores across different countries , evaluate outliers in the data, and ultimately assess whether sustainability outcomes are better or worse depending on a country's GDP per capita.
+After completing this report we hope to provide an analysis of the relationship between GDP per capita and sustainability scores across different countries, evaluate outliers in the data, and ultimately assess whether sustainability outcomes are better or worse depending on a country's GDP per capita.
 
 # Data Description
 
@@ -36,7 +36,7 @@ library(scales) #for formatting p-values
 library(broom)
 ```
 
-We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per capita was sourced from. The explanatory variable we were interested in is GDP per capita (GDP Per Capita, GapMinder) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (GDP Per Capita, WorldBank), published in April 2024. Prior to 1990, data was drawn from the 2023 version of the Maddison Project Database (Madison Project Database, 2024), which offers historical GDP per capita estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (PWT, 2024), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP per capita v26 and earlier versions (Lindgen, 2011). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
+We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per capita was sourced from. The explanatory variable we were interested in is GDP per capita (GDP Per Capita, GapMinder) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (GDP Per Capita, WorldBank), published in April 2024. Prior to 1990, data was drawn from the 2023 version of the Maddison Project Database (Maddison Project Database, 2024), which offers historical GDP per capita estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (PWT, 2024), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP per capita v26 and earlier versions (Lindgen, 2011). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
 
 The second dataset is where the SDI was sourced from. The response variable we were interested in is the SDI (U. Jean, 2021) from 1990-2019. The SDI stems from a research project focused on the ecological efficiency of nations in delivering human development. The data was somewhat cleaned/split into different categories and then posted to GapMinder.
 
